AllenNLP parts-of-speech

--- a/AllenNLP_0.ipynb
+++ b/AllenNLP_0.ipynb
@@ -30,7 +30,7 @@
     "<font size=\"+1\">Sentiment Analysis</font>\n",
     "<a href=\"AllenNLP_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">TBD</font> \n",
+    "<font size=\"+1\">Part-of-Speech Tagging</font> \n",
     "<a href=\"AllenNLP_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">TBD</font>\n",
@@ -44,9 +44,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## What is AllenNLP?\n",
+    "\n",
     "AllenNLP is a library built on top of PyTorch that provides a large number of well tested, powerful, higher-level abstractions that are specifically useful for performing Natural Language Processing tasks with using neural networks.\n",
     "\n",
-    "It is much easier to develop and test these NLP models using these higher abstractions than with the lower-level PyTorch basics—even those in `torch.nn` and `torch.nn.functional`.  A lot of the \"busy work with training schedules, metrics, optimization functions, data readers, and other aspects are wrapped in convenience functions or classes within AllenNLP.  However, using AllenNLP, you often make direct use of PyTorch functions, and under the hood all the computational work remains PyTorch. "
+    "It is much easier to develop and test these NLP models using these higher abstractions than with the lower-level PyTorch basics—even those in `torch.nn` and `torch.nn.functional`.  A lot of the \"busy work with training schedules, metrics, optimization functions, data readers, and other aspects are wrapped in convenience functions or classes within AllenNLP.  However, using AllenNLP, you often make direct use of PyTorch functions, and under the hood all the computational work remains PyTorch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Digression\n",
+    "\n",
+    "One thing you will probably notice about the code in this chapter is that AllenNLP makes broad use of [optional type annotations](https://www.python.org/dev/peps/pep-0484/).  Learning about those is a different course.  But as you see things like this, don't panic:\n",
+    "\n",
+    "```python\n",
+    "def first(l: Sequence[T]) -> T:  \n",
+    "    return l[0]\n",
+    "```\n",
+    "\n",
+    "The stuff that comes after the colons in formal parameters or after `->` in return values has no effect at runtime; it is used only by external type-checking tools that can make recommendations about code-correctness by static analysis."
    ]
   },
   {
@@ -303,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next Lesson\n",
+    "## Next Chapter\n",
     "\n",
     "**Enhancing an Image Classifier**: Libraries built on top of PyTorch offer very powerful tools for natural language processing.  Next we will return to image classification, and build on pretrained models as a demonstration of re-use neural networks.\n",
     "\n",
