--- a/AllenNLP_2.ipynb
+++ b/AllenNLP_2.ipynb
@@ -24,13 +24,13 @@
     "<font size=\"+1\">What is SpaCy?</font>\n",
     "<a href=\"AllenNLP_1.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Hight Level Interfaces to NLP using PyTorch</font>\n",
+    "<font size=\"+1\"><b><u>High Level Interfaces to NLP using PyTorch</u></b></font>\n",
     "<a href=\"AllenNLP_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">Sentiment Analysis</font>\n",
     "<a href=\"AllenNLP_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">TBD</font> \n",
+    "<font size=\"+1\">Part-of-Speech Tagging</font> \n",
     "<a href=\"AllenNLP_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">TBD</font>\n",
@@ -41,19 +41,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## High Level Interfaces to NLP using PyTorch"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next Lesson\n",
+    "## Next Chapter\n",
     "\n",
     "**Enhancing an Image Classifier**: Libraries built on top of PyTorch offer very powerful tools for natural language processing.  Next we will return to image classification, and build on pretrained models as a demonstration of re-use neural networks.\n",
     "\n",
