--- a/AllenNLP_6.ipynb
+++ b/AllenNLP_6.ipynb
@@ -24,19 +24,19 @@
     "<font size=\"+1\">What is SpaCy?</font>\n",
     "<a href=\"AllenNLP_1.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">Hight Level Interfaces to NLP using PyTorch</font>\n",
+    "<font size=\"+1\">High Level Interfaces to NLP using PyTorch</font>\n",
     "<a href=\"AllenNLP_2.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">Sentiment Analysis</font>\n",
     "<a href=\"AllenNLP_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">TBD</font> \n",
+    "<font size=\"+1\">Part-of-Speech Tagging</font> \n",
     "<a href=\"AllenNLP_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">TBD</font>\n",
     "<a href=\"AllenNLP_5.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">TBD</font>\n",
+    "<font size=\"+1\"><b><u>TBD</u></b></font>\n",
     "<a href=\"AllenNLP_6.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>"
    ]
   },
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next Lesson\n",
+    "## Next Chapter\n",
     "\n",
     "**Enhancing an Image Classifier**: Libraries built on top of PyTorch offer very powerful tools for natural language processing.  Next we will return to image classification, and build on pretrained models as a demonstration of re-use neural networks.\n",
     "\n",
