--- a/NetworkExamples_5.ipynb
+++ b/NetworkExamples_5.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "## Part of Speech Tagger\n",
     "\n",
-    "In this section we create an LSTM-based recurrent neural network to identify parts of speech.  This example is taken very closely from the official [PyTorch tutorial](https://pytorch.org/tutorials/beginner/nlp/sequence_models_tutorial.html#example-an-lstm-for-part-of-speech-tagging) by Robert Guthrie.  Some minor changes are made to the code and new commentary is introduced.\n",
+    "In this lesson we create an LSTM-based recurrent neural network to identify parts of speech.  This example is taken very closely from the official [PyTorch tutorial](https://pytorch.org/tutorials/beginner/nlp/sequence_models_tutorial.html#example-an-lstm-for-part-of-speech-tagging) by Robert Guthrie.  Some minor changes are made to the code and new commentary is introduced.\n",
     "\n",
     "The example we will look at here is enhanced and reworked and enhanced in an official AllenNLP tutorial that is also presented in the next chapter.  Comparing the styles of these two notebooks is a useful exercise.  The example here uses a very small toy training set; however, the same network *could* be trained against a robust corpus and produce reasonably good classification."
    ]
@@ -64,28 +64,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definining the network\n",
+    "\n",
+    "The network we create here is fairly similar to some others.  It is not very deep, as these go, but the LSTM provides a kind of \"depth\" within its one layer by retaining memory in hidden state."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7f8dceae3710>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "torch.manual_seed(1)"
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We do just a bit of bookkeeping up front.  We need some training data, which here we simply define in a list with sentences and their parts-of-speech.  In a more fleshed out model, the training examples would be much more numerous and probably live in external files or databases, and utilize a standard tagging format.  Here we simply create parallel lists of words and their part-of-speech."
    ]
   },
   {
@@ -97,67 +100,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[-0.0187,  0.1713, -0.2944]],\n",
-      "\n",
-      "        [[-0.3521,  0.1026, -0.2971]],\n",
-      "\n",
-      "        [[-0.3191,  0.0781, -0.1957]],\n",
-      "\n",
-      "        [[-0.1634,  0.0941, -0.1637]],\n",
-      "\n",
-      "        [[-0.3368,  0.0959, -0.0538]]], grad_fn=<StackBackward>)\n",
-      "(tensor([[[-0.3368,  0.0959, -0.0538]]], grad_fn=<StackBackward>), tensor([[[-0.9825,  0.4715, -0.0633]]], grad_fn=<StackBackward>))\n"
-     ]
-    }
-   ],
-   "source": [
-    "lstm = nn.LSTM(3, 3)  # Input dim is 3, output dim is 3\n",
-    "inputs = [torch.randn(1, 3) for _ in range(5)]  # make a sequence of length 5\n",
-    "\n",
-    "# initialize the hidden state.\n",
-    "hidden = (torch.randn(1, 1, 3),\n",
-    "          torch.randn(1, 1, 3))\n",
-    "\n",
-    "for i in inputs:\n",
-    "    # Step through the sequence one element at a time.\n",
-    "    # after each step, hidden contains the hidden state.\n",
-    "    out, hidden = lstm(i.view(1, 1, -1), hidden)\n",
-    "\n",
-    "# alternatively, we can do the entire sequence all at once.\n",
-    "# the first value returned by LSTM is all of the hidden states throughout\n",
-    "# the sequence. the second is just the most recent hidden state\n",
-    "# (compare the last slice of \"out\" with \"hidden\" below, they are the same)\n",
-    "# The reason for this is that:\n",
-    "# \"out\" will give you access to all hidden states in the sequence\n",
-    "# \"hidden\" will allow you to continue the sequence and backpropagate,\n",
-    "# by passing it as an argument  to the lstm at a later time\n",
-    "# Add the extra 2nd dimension\n",
-    "inputs = torch.cat(inputs).view(len(inputs), 1, -1)\n",
-    "hidden = (torch.randn(1, 1, 3), torch.randn(1, 1, 3))  # clean out hidden state\n",
-    "out, hidden = lstm(inputs, hidden)\n",
-    "print(out)\n",
-    "print(hidden)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "{'the': 0, 'dog': 1, 'ate': 2, 'apple': 3, 'we': 4, 'often': 5, 'pie': 6, 'everybody': 7, 'read': 8, 'that': 9, 'book': 10, 'do': 11, 'not': 12, 'me': 13}\n"
      ]
     }
    ],
    "source": [
-    "def prepare_sequence(seq, to_ix):\n",
-    "    idxs = [to_ix[w] for w in seq]\n",
-    "    return torch.tensor(idxs, dtype=torch.long)\n",
-    "\n",
-    "\n",
     "training_data = [\n",
     "    (\"the dog ate the apple\".split(), [\"DET\", \"NOUN\", \"VERB\", \"DET\", \"NOUN\"]),\n",
     "    (\"we often ate pie\".split(), [\"PRON\", \"PART\", \"VERB\", \"NOUN\"]),\n",
@@ -166,6 +113,7 @@
     "    (\"do not dog the dog\".split(), [\"VERB\", \"PART\", \"VERB\", \"DET\", \"NOUN\"]),\n",
     "    (\"we dog everybody\".split(), [\"PRON\", \"VERB\", \"NOUN\"])\n",
     "]\n",
+    "\n",
     "word_to_ix = {}\n",
     "for sent, tags in training_data:\n",
     "    for word in sent:\n",
@@ -176,28 +124,62 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "tag_to_ix = {\"DET\": 0, \"NOUN\": 1, \"VERB\": 2, \"PRON\": 3, \"PART\": 4}\n",
-    "ix_to_tag = {v:k for (k, v) in tag_to_ix.items()}\n",
-    "\n",
-    "# These will usually be more like 32 or 64 dimensional.\n",
-    "# We will keep them small, so we can see how the weights change as we train.\n",
-    "EMBEDDING_DIM = 6\n",
-    "HIDDEN_DIM = 6"
+    "We need a a function to encode words as integers and generate tensors based on those.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_sequence(seq, tag_to_ix):\n",
+    "    idxs = [tag_to_ix[w] for w in seq]\n",
+    "    return torch.tensor(idxs, dtype=torch.long)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also need to give numeric values to the target tags.  In a more robust arrangment, we would probably generate these from the collection of tags actually seen in training data.  For these five parts-of-speech, we simply hard code them.  The order is not significant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tag_to_ix = {\"DET\": 0, \"NOUN\": 1, \"VERB\": 2, \"PRON\": 3, \"PART\": 4}\n",
+    "ix_to_tag = {v:k for (k, v) in tag_to_ix.items()}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining the model\n",
+    "\n",
+    "This is where the real work happens, but there is surprisingly little of it needed.  We simply initialize with our layers, and create a very simple forward function.  \n",
+    "\n",
+    "We need to represent words in the vocabulary as vectors/tensors into a less dimensional space than, for example, a one-hot encoding of all the words in the vocabulary.  Each word is mapped to one vector.  Moreover, in this embedding, the transform learns to give words that are used in similar ways comparatively similar vectors, thereby capturing their similarity.\n",
+    "\n",
+    "In this particular toy example, the original tensor space does not have very many dimensions since it is a small vocabulary.  But we reduce it further for both tractability and potentially to identify distance similarities between words in a more robust training set.\n",
+    "\n",
+    "An embedding layer is learned jointly with a neural network model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LSTMTagger(nn.Module):\n",
-    "\n",
     "    def __init__(self, embedding_dim, hidden_dim, vocab_size, tagset_size):\n",
     "        super(LSTMTagger, self).__init__()\n",
     "        self.hidden_dim = hidden_dim\n",
@@ -220,24 +202,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial\n",
-      "tensor([[-1.3415, -1.4094, -1.4865, -2.0375, -1.9824],\n",
-      "        [-1.3193, -1.4269, -1.6062, -1.9190, -1.9295],\n",
-      "        [-1.2652, -1.4732, -1.6676, -1.9118, -1.8832],\n",
-      "        [-1.3094, -1.3948, -1.6339, -1.9272, -1.9561],\n",
-      "        [-1.3424, -1.4249, -1.5009, -1.9967, -1.9693]])\n"
-     ]
-    }
-   ],
    "source": [
+    "### Training the model\n",
+    "\n",
+    "The training regime is similar to that used in other networks.  We do not worry about some of the fancier steps like decaying learning rate for this toy example.  The below code simply goes through 300 epochs with no early exit or tweaking."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# These will usually on the order of 32 or 64 dimensional for a \n",
+    "# real-world vocabulary and training set size\n",
+    "EMBEDDING_DIM = 6\n",
+    "HIDDEN_DIM = 6\n",
+    "\n",
     "model = LSTMTagger(EMBEDDING_DIM, HIDDEN_DIM, len(word_to_ix), len(tag_to_ix))\n",
     "loss_function = nn.NLLLoss()\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.1)\n",
@@ -273,42 +256,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trained\n",
-      "tensor([[-0.0196, -4.4740, -7.2709, -5.2879, -6.0837],\n",
-      "        [-5.2160, -0.0580, -2.9891, -8.7630, -7.8053],\n",
-      "        [-6.8094, -4.1231, -0.0253, -4.9788, -7.1846],\n",
-      "        [-0.0213, -4.3791, -6.4513, -4.9825, -9.5001],\n",
-      "        [-4.3551, -0.0480, -3.4080, -8.7591, -7.1231]])\n"
-     ]
-    }
-   ],
    "source": [
-    "# See what the scores are after training\n",
-    "with torch.no_grad():\n",
-    "    inputs = prepare_sequence(training_data[0][0], word_to_ix)\n",
-    "    tag_scores = model(inputs)\n",
+    "### Making predictions\n",
     "\n",
-    "    # The sentence is \"the dog ate the apple\".  i,j corresponds to score for tag j\n",
-    "    # for word i. The predicted tag is the maximum scoring tag.\n",
-    "    # Here, we can see the predicted sequence below is 0 1 2 0 1\n",
-    "    # since 0 is index of the maximum value of row 1,\n",
-    "    # 1 is the index of maximum value of row 2, etc.\n",
-    "    # Which is DET NOUN VERB DET NOUN, the correct sequence!\n",
-    "    print(\"Trained\")\n",
-    "    print(tag_scores)"
+    "First let us tag some novel sentences.  These sentence, however, do not contain any novel words.  But of significance, the same word `dog` is used as both a noun and verb in the training set, and in both ways in the same sentence in the test set.  The tagger correctly identifies the role of each word."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +274,9 @@
      "output_type": "stream",
      "text": [
       "the[DET] dog[NOUN] read[VERB] the[DET] book[NOUN] \n",
-      "we[PRON] dog[VERB] the[DET] dog[NOUN] \n"
+      "\n",
+      "we[PRON] dog[VERB] the[DET] dog[NOUN] \n",
+      "\n"
      ]
     }
    ],
@@ -326,22 +286,131 @@
     "    \"we dog the dog\".split()\n",
     "]\n",
     "\n",
-    "for sentence in test_data:\n",
-    "    inputs = prepare_sequence(sentence, word_to_ix)\n",
-    "    for word, scores in zip(sentence, model(inputs)):\n",
-    "        best = torch.argmax(scores).item()\n",
-    "        part = ix_to_tag[best]\n",
-    "        print(f\"{word}[{part}]\", end=' ')\n",
-    "    print()"
+    "with torch.no_grad():\n",
+    "    for sentence in test_data:\n",
+    "        inputs = prepare_sequence(sentence, word_to_ix)\n",
+    "        for word, scores in zip(sentence, model(inputs)):\n",
+    "            best = torch.argmax(scores).item()\n",
+    "            part = ix_to_tag[best]\n",
+    "            print(f\"{word}[{part}]\", end=' ')\n",
+    "        print('\\n')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next Lesson\n",
+    "Let us also look at the logit predictions word-by-word in one sentence.  The \"winner\" for the part-of-speech for each word is rather strongly preferred, but in principle we could further rank \"probabilities\" based on the output weights."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DET</th>\n",
+       "      <th>NOUN</th>\n",
+       "      <th>VERB</th>\n",
+       "      <th>PRON</th>\n",
+       "      <th>PART</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>the</th>\n",
+       "      <td>-0.016570</td>\n",
+       "      <td>-4.650159</td>\n",
+       "      <td>-6.683524</td>\n",
+       "      <td>-5.776048</td>\n",
+       "      <td>-5.983213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dog</th>\n",
+       "      <td>-5.776295</td>\n",
+       "      <td>-0.013113</td>\n",
+       "      <td>-4.662496</td>\n",
+       "      <td>-9.979486</td>\n",
+       "      <td>-7.731818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>read</th>\n",
+       "      <td>-4.077704</td>\n",
+       "      <td>-3.677765</td>\n",
+       "      <td>-0.047626</td>\n",
+       "      <td>-5.756350</td>\n",
+       "      <td>-6.792664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>the</th>\n",
+       "      <td>-0.018484</td>\n",
+       "      <td>-4.250337</td>\n",
+       "      <td>-6.267156</td>\n",
+       "      <td>-7.017477</td>\n",
+       "      <td>-6.675817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>book</th>\n",
+       "      <td>-5.620692</td>\n",
+       "      <td>-0.007825</td>\n",
+       "      <td>-5.666985</td>\n",
+       "      <td>-9.176497</td>\n",
+       "      <td>-7.400708</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           DET      NOUN      VERB      PRON      PART\n",
+       "the  -0.016570 -4.650159 -6.683524 -5.776048 -5.983213\n",
+       "dog  -5.776295 -0.013113 -4.662496 -9.979486 -7.731818\n",
+       "read -4.077704 -3.677765 -0.047626 -5.756350 -6.792664\n",
+       "the  -0.018484 -4.250337 -6.267156 -7.017477 -6.675817\n",
+       "book -5.620692 -0.007825 -5.666985 -9.176497 -7.400708"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
     "\n",
-    "**Natural Language Processing**: This lesson looked at Reinforcement Learning.  In the next section we turn to the AllenNLP extension to PyTorch.\n",
+    "log_softmax = model(prepare_sequence(test_data[0], word_to_ix))\n",
+    "sentence = pd.DataFrame(log_softmax.detach().numpy(), columns=tag_to_ix)\n",
+    "sentence.index = test_data[0]\n",
+    "sentence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Chapter\n",
+    "\n",
+    "**Natural Language Processing**: This lesson looked at Reinforcement Learning.  In the next chaper we turn to the AllenNLP extension to PyTorch.\n",
     "\n",
     "<a href=\"AllenNLP_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a>"
    ]
