--- a/Outline.ipynb
+++ b/Outline.ipynb
@@ -136,10 +136,10 @@
     "* What is AllenNLP?\n",
     "* What is SpaCy?\n",
     "* High Level Interfaces to NLP using PyTorch\n",
-    "* Textual Entailment\n",
-    "* Named Entity Recognition\n",
-    "* Semantic Role Labeling\n",
-    "* Machine Comprehension\n",
+    "* Sentiment Analysis\n",
+    "* Part-of-Speech Tagging\n",
+    "* TBD\n",
+    "* TBD\n",
     "\n",
     "<div><a href=\"AllenNLP_0.ipynb\"><img src=\"img/open-notebook.png\" align=\"left\"/></a></div>"
    ]
