--- a/AllenNLP_3.ipynb
+++ b/AllenNLP_3.ipynb
@@ -30,7 +30,7 @@
     "<font size=\"+1\"><u><b>Sentiment Analysis</b></u></font>\n",
     "<a href=\"AllenNLP_3.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
-    "<font size=\"+1\">TBD</font> \n",
+    "<font size=\"+1\">Part-of-Speech Tagging</font> \n",
     "<a href=\"AllenNLP_4.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>\n",
     "\n",
     "<font size=\"+1\">TBD</font>\n",
@@ -38,6 +38,13 @@
     "\n",
     "<font size=\"+1\">TBD</font>\n",
     "<a href=\"AllenNLP_6.ipynb\"><img src=\"img/open-notebook.png\" align=\"right\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Semantic Analysis"
    ]
   },
   {
@@ -66,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GeForce RTX 2080 Ti\n",
+      "GPU memory used: 0\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -76,7 +92,7 @@
     "    torch.cuda.empty_cache()\n",
     "    device = 0\n",
     "    print(torch.cuda.get_device_name(device))\n",
-    "    print(f\"{torch.cuda.memory_allocated(device):,}\")\n",
+    "    print(f\"GPU memory used: {torch.cuda.memory_allocated(device):,}\")\n",
     "else:\n",
     "    device = -1"
    ]
@@ -87,7 +103,7 @@
    "source": [
     "### Credit\n",
     "\n",
-    "The material in this section is borrowed from Masato Hagiwara's [Training a Sentiment Analyzer using AllenNLP (in less than 100 lines of Python code)](http://www.realworldnlpbook.com/blog/training-sentiment-analyzer-using-allennlp.html).  I have made some minor changes to the code and provided my own commentary; I recommend all of his blog posts and other writing highly. I am very much looking forward to the release of his book _Real-World Natural Language Processing_, to be published in 2019 by Manning.\n",
+    "The material in this lesson is borrowed from Masato Hagiwara's [Training a Sentiment Analyzer using AllenNLP (in less than 100 lines of Python code)](http://www.realworldnlpbook.com/blog/training-sentiment-analyzer-using-allennlp.html).  I have made some minor changes to the code and provided my own commentary; I recommend all of his blog posts and other writing highly. I am very much looking forward to the release of his book _Real-World Natural Language Processing_, to be published in 2019 by Manning.\n",
     "\n",
     "The dataset used in this example by Hagiwara, and hence by me, are provided by Stanford University's [Sentiment Analysis](https://nlp.stanford.edu/sentiment/index.html) research page.  This dataset was \n",
     "presented in the paper _Recursive Deep Models for Semantic Compositionality Over a Sentiment Treebank_ by Richard Socher, Alex Perelygin, Jean Wu, Jason Chuang, Christopher Manning, Andrew Ng and Christopher Potts.  The dataset is provided with this repository for convenience."
@@ -519,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next Lesson\n",
+    "## Next Chapter\n",
     "\n",
     "**Enhancing an Image Classifier**: Libraries built on top of PyTorch offer very powerful tools for natural language processing.  Next we will return to image classification, and build on pretrained models as a demonstration of re-use neural networks.\n",
     "\n",
